Clean up jlink/jmod code